@@ -1,4 +1,5 @@
-\name{bin.var}
+\name{binVariable}
+\alias{binVariable}
 \alias{bin.var}
 
 \title{Bin a Numeric Varisible}
@@ -7,11 +8,14 @@
   Create a factor dissecting the range of a numeric variable into
   bins of equal width, (roughly) equal frequency, or at "natural"
   cut points. The \code{\link[base]{cut}} function is used to create the factor.
+ \code{bin.var} is a synomym for \code{binVariable}, retained for backwards compatibility.
 }
 
 \usage{
-bin.var(x, bins = 4, method = c("intervals", "proportions", "natural"),
+binVariable(x, bins = 4, method = c("intervals", "proportions", "natural"),
     labels = FALSE)
+    
+bin.var(...)
 }
 
 \arguments{
@@ -24,6 +28,7 @@ bin.var(x, bins = 4, method = c("intervals", "proportions", "natural"),
   \item{labels}{if \code{FALSE}, numeric labels will be used for the factor levels;
     if \code{NULL}, the cut points are used to define labels; otherwise a character
     vector of level names.}
+  \item{...}{arguments to be passed to \code{binVariable}.}
 }
 
 \value{
@@ -36,7 +41,7 @@ bin.var(x, bins = 4, method = c("intervals", "proportions", "natural"),
 \seealso{\code{\link[base]{cut}}, \code{\link[stats]{kmeans}}.}
 
 \examples{
-summary(bin.var(rnorm(100), method="prop", labels=letters[1:4]))
+summary(binVariable(rnorm(100), method="prop", labels=letters[1:4]))
 }
   
 \keyword{manip}
